fix(bookings): cleanup breaking changes + seed users + capacity/conflict/edit + banner UX